# subete

./: .gitignore  .readthedocs.yml  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: deploy.yml  test.yml
docs/: .readthedocs.yml  changelog.rst  conf.py  index.rst  subete.rst  usage.rst
docs/_templates/: layout.html
scripts/: build-docs.py  run-tests.sh
subete/: __init__.py  imghdr.py  language_collection.py  project.py  repo.py  sample_program.py
tests/: additional-language-colors.yml  language-colors.yml  test_integration.py  test_integration_for_bad_repo.py  test_language_collection.py  test_project.py  test_repo.py  test_sample_program.py
tests/python/: README.md
