[project]
name = "subete"
version = "0.22.2"
description = "The Sample Programs API in Python"
authors = [
    {name = "Jeremy Grifski", email = "jeremy.grifski@therenegadecoder.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
license = {text = "LICENSE"}
dependencies = [
    "pyyaml (>=6,<7)",
    "gitpython (>=3,<4)",
    "requests (>=2.32.4,<3.0.0)",
    "glotter2-core (>=0.1.2,<0.2.0)",
]
dynamic = [ "classifiers" ]

[project.urls]
"Bug Tracker" = "https://github.com/TheReneagadeCoder/subete/issues"
"Changelog" = "https://github.com/TheRenegadeCoder/subete/blob/main/docs/changelog.rst"
homepage = "https://github.com/TheReneagadeCoder/subete"
documentation = "https://subete.therenegadecoder.com/en/latest/"

[tool.poetry]
packages = [{include = "subete"}]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Documentation :: Sphinx",
    "Development Status :: 3 - Alpha"
]

[dependency-groups]
dev = [
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-cov (>=6.0.0,<7.0.0)"
]
docs = [
    "sphinx (>=7.4.7,<8.0.0)",
    "sphinx-rtd-theme (>=3.0.2,<4.0.0)",
    "tomli (>=2.2.1,<3.0.0)"
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_file = "log.log"
log_file_level = "INFO"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.report]
exclude_lines = [
    "# pragma: no cover"
]
fail_under = 100

[build-system]
requires = ["poetry-core>=2.3.1,<3.0.0"]
build-backend = "poetry.core.masonry.api"
